--- a/styles.css
+++ b/styles.css
@@ -128,4 +128,5 @@ input[type=button], input[type=submit], input[type=reset] {
     text-decoration: none;
     cursor: pointer;
 	font-size: 16px;
+	width: 225px;
 }
